--- a/index.html
+++ b/index.html
@@ -178,9 +178,15 @@
     <p>
         Nov 9, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Zhouli Xu</b> (University of California San Diego), 
-        <a onclick="toggle_visibility('23-7');"><i>TBA</i></a><br />
+        <a onclick="toggle_visibility('23-7');"><i>The Adams differentials on the classes $h_j^3$</i></a><br />
         <div id="23-7" class="toshow" style="display:none">
+            In filtration 1 of the Adams spectral sequence, using secondary cohomology operations, Adams computed the differentials on the classes $h_j$, 
+            resolving the Hopf invariant one problem.  In Adams filtration 2, using equivariant and chromatic homotopy theory, Hill–Hopkins–Ravenel 
+            proved that the classes $h_j^2$ support non-trivial differentials for $j \geq 7$, resolving the celebrated Kervaire invariant one problem.  <br />
             
+            I will talk about joint work with Robert Burklund: In Adams filtration 3, we prove an infinite family of non-trivial $d_4$-differentials on the 
+            classes $h_j^3$ for $j \geq 6$, confirming a conjecture of Mahowald.  Our proof uses two different deformations of stable homotopy theory – 
+            $\mathbb C$-motivic stable homotopy theory and $\mathbb F_2$-synthetic homotopy theory – both in an essential way.  
         </div>
     </p>
 
