--- a/grad/index.html
+++ b/grad/index.html
@@ -154,6 +154,11 @@
 <!--    By default, we meet <b>Tuesdays 4:20 in M5024</b>.  -->
     </p>
 
+    <p>
+        This semester, besides the main seminar, there is a study group on higher category theory, meeting on Sunday evenings at 7.  
+        For more information, contact <a href="mailto:12332880@mail.sustech.edu.cn">Yunhao Sun</a>.
+    </p>
+
 
 <h3>Talks in Fall 2023 (Tuesdays 4:20)</h3>
 
@@ -170,6 +175,12 @@
     </p>
 -->
     
+    <p>
+        Nov 7, '23 (M4009), 
+        <b>Zhonglin Wu</b>, 
+        <i>The motivic Adams spectral sequence</i>
+    </p>
+
     <p>
         Oct 17, '23 (M4009), 
         <b>Yifan Wu</b>, 
