--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -173,7 +173,19 @@
     <p>
         Oct 19, '23,     
         <b>Zian Zhao</b>, 
-        <i>TBA</i>
+        <i>Maps between Jacobians</i>
+    </p>
+
+    <p>
+        Nov 2, '23,     
+        <b>Jinghua Xi</b>, 
+        <i>Modular Jacobians and Hecke operators</i>
+    </p>
+
+    <p>
+        Nov 9, '23,     
+        <b>Jinghua Xi</b>, 
+        <i>Algebraic numbers and algebraic integers</i>
     </p>
 
 
