--- a/grad/index.html
+++ b/grad/index.html
@@ -156,7 +156,7 @@
 
     <p>
         This semester, besides the main seminar, there is a study group on higher category theory, meeting on Sunday evenings at 7.  
-        For more information, contact <a href="mailto:12332880@mail.sustech.edu.cn">Yunhao Sun</a>.
+        For more information, contact <a href="mailto:12333069@mail.sustech.edu.cn">Zhou Fang</a> and <a href="mailto:12332880@mail.sustech.edu.cn">Yunhao Sun</a>.
     </p>
 
 
