--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -185,7 +185,7 @@
     <p>
         Nov 9, '23,     
         <b>Jinghua Xi</b>, 
-        <i>Algebraic numbers and algebraic integers</i>
+        <i>Algebraic eigenvalues</i>
     </p>
 
 
