--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -188,6 +188,12 @@
         <i>Algebraic eigenvalues</i>
     </p>
 
+    <p>
+        Nov 16, '23,     
+        <b>Yifan Wu</b>, 
+        <i>More geometry and examples</i>
+    </p>
+
 
 <h3><a id="P"></a>Previous Semesters</h3>
     <li><a href="23spr/syllabus.pdf" target="_blank">Spring 2023</a>, Knot theory and low-dimensional topology</li>
