--- a/grad/index.html
+++ b/grad/index.html
@@ -192,6 +192,12 @@
         <i>The motivic Adams spectral sequence</i>
     </p>
 
+    <p>
+         
+        <b>Wenbo Liao</b> (Chinese University of Hong Kong), 
+        <i>TBA</i>
+    </p>
+
 
 <h3><a id="23spr"></a>Talks in Spring 2023 (Tuesdays 4:20 in M5024)</h3>
 
