--- a/grad/index.html
+++ b/grad/index.html
@@ -189,7 +189,19 @@
     <p>
         Nov 7, '23 (M4009), 
         <b>Zhonglin Wu</b>, 
-        <i>The motivic Adams spectral sequence</i>
+        <a onclick="toggle_visibility('10');">
+        <i>The motivic Adams spectral sequence</i></a><br />
+        <div id="10" class="toshow" style="display:none">
+            <li>In this lecture, we briefly introduce some properties and examples of calculations of the motivic Admas spectral sequence and show how to use it to help us 
+ to compute some differentials in the classical Admas spectral sequence.</li>
+            <li><a href="23fal/MASS_slides.pdf" target="_blank">Slides</a></li>
+        </div>
+    </p>
+    
+    <p>
+        , 
+        <b></b>, 
+        <i></i>
     </p>
 
     <p>
