--- a/index.html
+++ b/index.html
@@ -160,9 +160,13 @@
     <p>
         Dec 28, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Neil Strickland</b> (University of Sheffield), 
-        <a onclick="toggle_visibility('23-9');"><i>TBA</i></a><br />
+        <a onclick="toggle_visibility('23-9');"><i>Recent progress in chromatic homotopy theory</i></a><br />
         <div id="23-9" class="toshow" style="display:none">
+            Chromatic homotopy theory is a branch of algebraic topology which has seen an explosion of new activity in recent years.  
+            In particular, in the summer of 2023 Burklund, Hahn, Levy and Schlank announced the negative resolution of Ravenel's Telescope Conjecture, which had been open since 1984.  
+            That conjecture said that two categories are the same; now we know that they are different, and we expect to find a rich and intricate structure in the gapbetween them.  <br />
             
+            In this talk I will attempt to survey, for a general pure mathematical audience, the main ideas of chromatic homotopy theory and some highlights of recent progress.
         </div>
     </p>
 
