--- a/index.html
+++ b/index.html
@@ -173,9 +173,11 @@
     <p>
         Dec 19, '23 (Tuesday, 4:20–5:10 pm), 
         <b>Zhipeng Duan</b> (Nanjing Normal University), 
-        <a onclick="toggle_visibility('23-8');"><i>TBA</i></a><br />
+        <a onclick="toggle_visibility('23-8');"><i>Moduli spaces of trees and complexes of not 2-connected graphs</i></a><br />
         <div id="23-8" class="toshow" style="display:none">
-            
+            In this talk we will discuss two kinds of symmetric spaces. The first one is the moduli space of trees  which were introduced by Whitehouse for studying $\Gamma$-homology and $\mathbb{E}_{\infty}$-obstruction theory.  The second one is the complex of not $2$-connected graphs introduced by Vassiliev on studying  knot invariants.  Interestingly, their  homology as $\Sigma_n$-modules are isomorphic up to a sign representation of the symmetric group $\Sigma_n$ and a degree shift.
+
+During this talk, I will show that this isomorphism can be lifted into topological level. Specifically, I will show that  these two spaces are in fact $\Sigma_n$-equivariant homotopy equivalent to each other.  This is  joint work with Greg Arone and Guchuan Li.
         </div>
     </p>
 
