--- a/grad/index.html
+++ b/grad/index.html
@@ -204,7 +204,7 @@
         Nov 28, '23, 
         <b>Qingrui Qu</b>, 
         <a onclick="toggle_visibility('12');">
-        <i>The special fiber of the motivic deformation of the stable homotopy category is algebraic</i></a><br />
+        <i>On "The special fiber of the motivic deformation of the stable homotopy category is algebraic"</i></a><br />
         <div id="10" class="toshow" style="display:none">
             
         </div>
