--- a/grad/index.html
+++ b/grad/index.html
@@ -195,7 +195,7 @@
         <i>The motivic Adams spectral sequence</i></a><br />
         <div id="11" class="toshow" style="display:none">
             <li>In this lecture, we briefly introduce some properties and examples of calculations of the motivic Admas spectral sequence and show how to use it to help us 
- to compute some differentials in the classical Admas spectral sequence.</li>
+ compute some differentials in the classical Admas spectral sequence.</li>
             <li><a href="23fal/MASS_slides.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
