--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
     </p>
 
     <p>
-        Dec 19, '23 (Tuesday, 4:20–5:10 pm), 
+        Dec 20, '23 (Wednesday, 4:20–5:10 pm, M1001), 
         <b>Zhipeng Duan</b> (Nanjing Normal University), 
         <a onclick="toggle_visibility('23-8');"><i>Moduli spaces of trees and complexes of not 2-connected graphs</i></a><br />
         <div id="23-8" class="toshow" style="display:none">
