--- a/grad/index.html
+++ b/grad/index.html
@@ -175,7 +175,18 @@
     </p>
 -->
     
-
+    <p>
+        nov 28, '23, 
+        <b>Qingrui Qu</b>, 
+        <a onclick="toggle_visibility('10');">
+        <i>On "The special fiber of the motivic deformation of the stable homotopy category is algebraic"</i></a><br />
+        <!--
+        <div id="10" class="toshow" style="display:none">
+            <li>In this lecture, we briefly introduce algebraic theories and operations. In particular, we specify these settings in homotopy theory and land on the so called Dyer-Lashof theories. In the second part, we calculate Dyer-Lashof operations for some spectra, and discuss the relation between them and power operations.</li>
+            <li><a href="23fal/Dyer_Lashof_Theory_and_Algebras.pdf" target="_blank">Slides</a></li>
+        </div>
+        -->
+    </p>
     
     <p>
         Oct 17, '23, 
