--- a/grad/index.html
+++ b/grad/index.html
@@ -181,9 +181,10 @@
         Oct 17, '23, 
         <b>Yifan Wu</b>, 
         <a onclick="toggle_visibility('10');">
-        <i>Dyer Lashof theories and algebras</i></a><br />
+        <i>Dyer–Lashof theories and algebras</i></a><br />
         <div id="10" class="toshow" style="display:none">
-            <li>In this lecture, we briefly introduce algebraic theories and operations. In particular, we specify these settings in homotopy theory and land on the so called Dyer-Lashof theories. In the second part, we calculate Dyer-Lashof operations for some spectra, and discuss the relation between them and power operations.</li>
+            <li>In this lecture, we briefly introduce algebraic theories and operations. In particular, we specify these settings in homotopy theory and land on the so called Dyer–Lashof theories.  
+                In the second part, we calculate Dyer–Lashof operations for some spectra, and discuss the relation between them and power operations.</li>
             <li><a href="23fal/Dyer_Lashof_Theory_and_Algebras.pdf" target="_blank">Slides</a></li>
         </div>
     </p>
