--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -194,6 +194,24 @@
         <i>More geometry and examples</i>
     </p>
 
+    <p>
+        Nov 23, '23,     
+        <b>Rongming Yin</b>, 
+        <i>Eigenforms and Abelian varieties</i>
+    </p>
+
+    <p>
+        Nov 30, '23,     
+        <b>Rongming Yin</b>, 
+        <i>Algebraic curves and their function fields</i>
+    </p>
+
+    <p>
+        Dec 7, '23,     
+        <b>Rongming Yin</b>, 
+        <i>TBA</i>
+    </p>
+
 
 <h3><a id="P"></a>Previous Semesters</h3>
     <li><a href="23spr/syllabus.pdf" target="_blank">Spring 2023</a>, Knot theory and low-dimensional topology</li>
