--- a/grad/index.html
+++ b/grad/index.html
@@ -213,10 +213,10 @@
 
 
     <p>
-        Dec 5, '23, 
+        Dec 5, '23 (4:20, Yidan 307), 
         <b>Yunhao Sun</b>, 
         <a onclick="toggle_visibility('13');">
-        <i>TBA</i></a><br />
+        <i>On "The Chow $t$-structure on the $\infty$-category of motivic spectra"</i></a><br />
         <div id="13" class="toshow" style="display:none">
             
         </div>
