--- a/index.html
+++ b/index.html
@@ -160,8 +160,8 @@
     <p>
         Dec 28, '23 (Colloquium, Thursday, 4:30–5:30 pm, M1001), 
         <b>Neil Strickland</b> (University of Sheffield), 
-        <a onclick="toggle_visibility('23-9');"><i>Recent progress in chromatic homotopy theory</i></a><br />
-        <div id="23-9" class="toshow" style="display:none">
+        <a onclick="toggle_visibility('23-10');"><i>Recent progress in chromatic homotopy theory</i></a><br />
+        <div id="23-10" class="toshow" style="display:none">
             Chromatic homotopy theory is a branch of algebraic topology which has seen an explosion of new activity in recent years.  
             In particular, in the summer of 2023 Burklund, Hahn, Levy and Schlank announced the negative resolution of Ravenel's Telescope Conjecture, which had been open since 1984.  
             That conjecture said that two categories are the same; now we know that they are different, and we expect to find a rich and intricate structure in the gap between them.  <br />
@@ -170,6 +170,16 @@
         </div>
     </p>
 
+
+    <p>
+        Dec 27, '23 (Wednesday, 4:20–5:20 pm, Taizhou Hall 240A), 
+        <b>Shicheng Wang</b> (Peking University), 
+        <a onclick="toggle_visibility('23-9');"><i>Some connections between topology and number theory</i></a><br />
+        <div id="23-9" class="toshow" style="display:none">
+            We will discuss some connections between topology and number theory inspired by the studies of mapping degrees and achirality of manifolds.
+        </div>
+    </p>
+    
     <p>
         Dec 20, '23 (Wednesday, 4:20–5:10 pm, M1001), 
         <b>Zhipeng Duan</b> (Nanjing Normal University), 
