--- a/acts/index.html
+++ b/acts/index.html
@@ -132,7 +132,7 @@
     </p>
 
 
-<h3><a id="T"></a>Talks in Spring 2023</h3>
+<h3><a id="T"></a>Talks in 2023</h3>
 
     <p>
         Apr 3, '23, 
@@ -152,6 +152,14 @@
         <a onclick="toggle_visibility('23-1');"><i>Speech signal processing in multi-speaker environments: problems, modelings, and assessment</i></a><br />
         <div id="23-1" class="toshow" style="display:none">
             Deep learning for speech enhancement has dramatically accelerated the process of the cocktail party problem, which is a major challenge yet to be solved for tracking, enhancing and recognizing each individual speaker when multiple speakers talk simultaneously in a noisy and reverberant environment. In this presentation, I will start from solutions to the keywords spotting problem in a multi-speaker environment. A hybrid of full-band and narrow-band modeling is then introduced to address speech enhancement problems including acoustic echo cancellation, noise suppression, dereverberation, and automatic gain control in both single-channel and multi-channel setups. MetricNet, a non-intrusive speech quality assessment model, is developed for speech enhancement evaluation in real scenarios.
+        </div>
+    </p>
+    <p>
+        Dec 26, '23 (Tuesday, 10:20–11:20 am, M5024), 
+        <b>Meng Yu</b> (Tencent AI Lab), 
+        <a onclick="toggle_visibility('23-2');"><i>Generative models for speech processing</i></a><br />
+        <div id="23-2" class="toshow" style="display:none">
+            In today’s speech processing, enhancing speech quality in challenging acoustic settings remains a challenge.  Current deep learning solutions often can’t fully negate background noise or reverberation, affecting the listening experience.  Our research introduces a pioneering method that utilizes pre-trained generative techniques to recreate clear speech from inferior inputs.  By capitalizing on pre-trained vocoder and codec models, our approach ensures superior speech quality and resilience in demanding scenarios.  Generative techniques skillfully address speech signal information loss, leading to enhanced audio clarity and minimized distortions.  Our experiments, spanning both simulated and real-world datasets, emphasize the method’s effectiveness.  Notably, using codec models resulted in optimal audio ratings.  This research emphasizes the immense potential of leveraging pre-trained generative tools, especially where conventional methods fall short.
         </div>
     </p>
 
