--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -209,7 +209,24 @@
     <p>
         Dec 7, '23,     
         <b>Rongming Yin</b>, 
-        <i>TBA</i>
+        <i>Isogenies between elliptic curves</i>
+    </p>
+
+    <p>
+        Dec 14, '23,     
+        <b>Yifan Wu</b>, 
+        <i>Function fields of modular curves</i>
+    </p>
+
+    <p>
+        Dec 21, '23,     
+        <b>No Seminar</b>
+    </p>
+
+    <p>
+        Dec 28, '23,     
+        <b>Yifan Wu</b> 
+        <i>Function fields of modular curves, cont'd</i>
     </p>
 
 
