--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -225,7 +225,7 @@
 
     <p>
         Dec 28, '23,     
-        <b>Yifan Wu</b> 
+        <b>Yifan Wu</b>, 
         <i>Function fields of modular curves, cont'd</i>
     </p>
 
