--- a/grad/index.html
+++ b/grad/index.html
@@ -249,7 +249,7 @@
         Jan 2, '23 (4:20–5:10, M5024)
         <b>Wenhui Yang</b>, 
         <a onclick="toggle_visibility('16');">
-        <i>Homology theory for directed graphs</i></a><br />
+        <i>Homotopy theory for directed graphs</i></a><br />
         <div id="16" class="toshow" style="display:none">
             
         </div>
