--- a/grad/index.html
+++ b/grad/index.html
@@ -237,7 +237,7 @@
         Dec 26, '23 (4:20–5:10, M4009)
         <b>Jiacheng Liang</b>, 
         <a onclick="toggle_visibility('15');">
-        <i>An introduction to $\infty$-categorical algebra</i></a><br />
+        <i>An overview of $\infty$-categories and higher algebra</i></a><br />
         <div id="15" class="toshow" style="display:none">
             
         </div>
