--- a/grad/index.html
+++ b/grad/index.html
@@ -239,7 +239,7 @@
         <a onclick="toggle_visibility('15');">
         <i>An overview of $\infty$-categories and higher algebra</i></a><br />
         <div id="15" class="toshow" style="display:none">
-            
+            <li><a href="23fal/Higher algebra ljc (2).pdf" target="_blank">Slides</a></li>
         </div>
     </p>
     
