--- a/grad/index.html
+++ b/grad/index.html
@@ -232,7 +232,7 @@
     </p>
 
     <p>
-        Dec 26, '23 (4:20–5:10, M4009),
+        Dec 26, '23,
         <b>Jiacheng Liang</b>, 
         <a href="23fal/1226-Liang.pdf" target="_blank"><i>An overview of $\infty$-categories and higher algebra</i></a>
     </p>
