--- a/undergrad/index.html
+++ b/undergrad/index.html
@@ -173,7 +173,9 @@
     <p>
         Oct 19, '23,     
         <b>Zian Zhao</b>, 
-        <i>Maps between Jacobians</i>
+        <a href="23fal/10_19_Zian_Zhao.pdf" target="_blank"    
+            <i>Double coset maps between space of modular forms and modular Jacobians</i>
+        </a>
     </p>
 
     <p>
