--- a/grad/index.html
+++ b/grad/index.html
@@ -243,11 +243,10 @@
         <a onclick="toggle_visibility('13');">
         <i>Homotopy theory for directed graphs</i></a><br />
         <div id="13" class="toshow" style="display:none">
-            <!-- 
+            <！--
             <li>Abstract</li>
-
-            <li><a href="23fal/MMDD-Surname.pdf" target="_blank">Notes/Slides</a></li>            
             -->
+            <li><a href="23fal/Homotopy_theory_for_digraphs.pdf" target="_blank">Notes/Slides</a></li>            
         </div>
     </p>
     
