--- a/grad/index.html
+++ b/grad/index.html
@@ -240,11 +240,7 @@
     <p>
         Jan 4, '24 (4:20–5:10, M5024),
         <b>Wenhui Yang</b>, 
-        <a onclick="toggle_visibility('13');">
-        <i>Homotopy theory for directed graphs</i></a><br />
-        <div id="13" class="toshow" style="display:none">
-            <li><a href="23fal/Homotopy_theory_for_digraphs.pdf" target="_blank">Notes/Slides</a></li>            
-        </div>
+        <a href="23fal/0104-Yang.pdf" target="_blank"><i>Homotopy theory for directed graphs</i></a>
     </p>
     
 
