--- a/acts/index.html
+++ b/acts/index.html
@@ -154,6 +154,19 @@
             Deep learning for speech enhancement has dramatically accelerated the process of the cocktail party problem, which is a major challenge yet to be solved for tracking, enhancing and recognizing each individual speaker when multiple speakers talk simultaneously in a noisy and reverberant environment. In this presentation, I will start from solutions to the keywords spotting problem in a multi-speaker environment. A hybrid of full-band and narrow-band modeling is then introduced to address speech enhancement problems including acoustic echo cancellation, noise suppression, dereverberation, and automatic gain control in both single-channel and multi-channel setups. MetricNet, a non-intrusive speech quality assessment model, is developed for speech enhancement evaluation in real scenarios.
         </div>
     </p>
+
+    <p>
+        Nov 21, '23 (Beijing Normal University – Hong Kong Baptist University United International College), 
+        <b>Yifei Zhu</b>, 
+        <a href="22-23/Zhu-20231121.pdf" target="_blank"><i>Topological time series analysis and deep learning with applications</i></a>
+    </p>
+
+    <p>
+        Nov 26, '23 (Yanqi Lake Beijing Institute of Mathematical Sciences and Applications), 
+        <b>Yifei Zhu</b>, 
+        <a href="22-23/Zhu-20231126.pdf" target="_blank"><i>Topological combined machine learning for consonant recognition</i></a>
+    </p>
+
     <p>
         Dec 26, '23 (Tuesday, 10:20–11:10 am, M5024), 
         <b>Meng Yu</b> (Tencent AI Lab), 
