--- a/acts/index.html
+++ b/acts/index.html
@@ -164,14 +164,18 @@
     <p>
         Nov 26, '23 (Yanqi Lake Beijing Institute of Mathematical Sciences and Applications), 
         <b>Yifei Zhu</b>, 
-        <a href="22-23/Zhu-20231126.pdf" target="_blank"><i>Topological combined machine learning for consonant recognition</i></a>
+        <a onclick="toggle_visibility('23-2');"><i>Topological combined machine learning for consonant recognition</i></a><br />
+        <div id="23-2" class="toshow" style="display:none">
+            <li><a href="https://arxiv.org/abs/2311.15210" target="_blank">Preprint</a></li>
+            <li><a href="22-23/Zhu-20231126.pdf" target="_blank">Slides</a></li>    
+        </div>
     </p>
 
     <p>
         Dec 26, '23 (Tuesday, 10:20–11:10 am, M5024), 
         <b>Meng Yu</b> (Tencent AI Lab), 
-        <a onclick="toggle_visibility('23-2');"><i>Generative models for speech processing</i></a><br />
-        <div id="23-2" class="toshow" style="display:none">
+        <a onclick="toggle_visibility('23-3');"><i>Generative models for speech processing</i></a><br />
+        <div id="23-3" class="toshow" style="display:none">
             In today’s speech processing, enhancing speech quality in challenging acoustic settings remains a challenge.  Current deep learning solutions often can’t fully negate background noise or reverberation, affecting the listening experience.  Our research introduces a pioneering method that utilizes pre-trained generative techniques to recreate clear speech from inferior inputs.  By capitalizing on pre-trained vocoder and codec models, our approach ensures superior speech quality and resilience in demanding scenarios.  Generative techniques skillfully address speech signal information loss, leading to enhanced audio clarity and minimized distortions.  Our experiments, spanning both simulated and real-world datasets, emphasize the method’s effectiveness.  Notably, using codec models resulted in optimal audio ratings.  This research emphasizes the immense potential of leveraging pre-trained generative tools, especially where conventional methods fall short.
         </div>
     </p>
@@ -179,8 +183,8 @@
     <p>
         Dec 26, '23 (Tuesday, 11:20 am–12:10 pm, M5024), 
         <b>Zhiwang Yu</b>, 
-        <a onclick="toggle_visibility('23-3');"><i>Toplogy of neural networks</i></a> (postponed) <br />
-        <div id="23-3" class="toshow" style="display:none">
+        <a onclick="toggle_visibility('23-4');"><i>Toplogy of neural networks</i></a> (postponed) <br />
+        <div id="23-4" class="toshow" style="display:none">
             <li>Duan et al., <a href="https://doi.org/10.1103/PhysRevResearch.5.L022041" title="" target="_blank">Embedding theory of reservoir computing and reducing reservoir network using time delays</a></li>
             <li>Shen et al., <a href="https://doi.org/10.1038/nphoton.2017.93" title="" target="_blank">Deep learning with coherent nanophotonic circuits</a></li>
         </div>
