--- a/acts/index.html
+++ b/acts/index.html
@@ -181,9 +181,9 @@
     </p>
 
     <p>
-        Dec 26, '23 (Tuesday, 11:20 am–12:10 pm, M5024), 
+        Jan 12, '24 (Friday, 2 pm, Lecture Hall 3-115), 
         <b>Zhiwang Yu</b>, 
-        <a onclick="toggle_visibility('23-4');"><i>Toplogy of neural networks</i></a> (postponed) <br />
+        <a onclick="toggle_visibility('23-4');"><i>Toplogy of neural networks</i></a><br />
         <div id="23-4" class="toshow" style="display:none">
             <li>Duan et al., <a href="https://doi.org/10.1103/PhysRevResearch.5.L022041" title="" target="_blank">Embedding theory of reservoir computing and reducing reservoir network using time delays</a></li>
             <li>Shen et al., <a href="https://doi.org/10.1038/nphoton.2017.93" title="" target="_blank">Deep learning with coherent nanophotonic circuits</a></li>
