--- a/acts/index.html
+++ b/acts/index.html
@@ -156,18 +156,15 @@
     </p>
 
     <p>
-        Nov 21, '23 (Beijing Normal University – Hong Kong Baptist University United International College), 
-        <b>Yifei Zhu</b>, 
-        <a href="22-23/Zhu-20231121.pdf" target="_blank"><i>Topological time series analysis and deep learning with applications</i></a>
-    </p>
-
-    <p>
         Nov 26, '23 (Yanqi Lake Beijing Institute of Mathematical Sciences and Applications), 
         <b>Yifei Zhu</b>, 
         <a onclick="toggle_visibility('23-2');"><i>Topological combined machine learning for consonant recognition</i></a><br />
         <div id="23-2" class="toshow" style="display:none">
-            <li><a href="https://arxiv.org/abs/2311.15210" target="_blank">Preprint</a></li>
-            <li><a href="22-23/Zhu-20231126.pdf" target="_blank">Slides</a></li>    
+            <li><a href="22-23/Zhu-20231126.pdf" target="_blank">Slides</a> based on recent talks at the 
+                Hangzhou Workshop on Topological Data Analysis and at the 
+                FST &amp; FBM Series Lecture of Beijing Normal University – Hong Kong Baptist University United International College 
+                (with support from the Guangdong Provincial Key Laboratory of Interdisciplinary Research and Application for Data Science)</li>    
+            <li><a href="https://arxiv.org/abs/2311.15210" target="_blank">Preprint</a> with Pingyao Feng, Qingrui Qu, Siheng Yi, and Zhiwang Yu</li>
         </div>
     </p>
 
@@ -181,9 +178,9 @@
     </p>
 
     <p>
-        Jan 12, '24 (Friday, 2 pm, Lecture Hall 3-115), 
+        Jan 12, '24 (Friday, 2 pm, Lecture Hall 3-115 and Tencent Meeting 580-751-380, postponed from Dec 26, '23), 
         <b>Zhiwang Yu</b>, 
-        <a onclick="toggle_visibility('23-4');"><i>Toplogy of neural networks</i></a><br />
+        <a onclick="toggle_visibility('23-4');"><i>Topological inputs for deep learning and topology of neural network architectures</i></a><br />
         <div id="23-4" class="toshow" style="display:none">
             <li>Duan et al., <a href="https://doi.org/10.1103/PhysRevResearch.5.L022041" title="" target="_blank">Embedding theory of reservoir computing and reducing reservoir network using time delays</a></li>
             <li>Shen et al., <a href="https://doi.org/10.1038/nphoton.2017.93" title="" target="_blank">Deep learning with coherent nanophotonic circuits</a></li>
