--- a/index.html
+++ b/index.html
@@ -162,11 +162,13 @@
         <b>Neil Strickland</b> (University of Sheffield), 
         <a onclick="toggle_visibility('23-10');"><i>Recent progress in chromatic homotopy theory</i></a><br />
         <div id="23-10" class="toshow" style="display:none">
-            Chromatic homotopy theory is a branch of algebraic topology which has seen an explosion of new activity in recent years.  
+            <li>Chromatic homotopy theory is a branch of algebraic topology which has seen an explosion of new activity in recent years.  
             In particular, in the summer of 2023 Burklund, Hahn, Levy and Schlank announced the negative resolution of Ravenel's Telescope Conjecture, which had been open since 1984.  
             That conjecture said that two categories are the same; now we know that they are different, and we expect to find a rich and intricate structure in the gap between them.  <br />
             
-            In this talk I will attempt to survey, for a general pure mathematical audience, the main ideas of chromatic homotopy theory and some highlights of recent progress.
+            In this talk I will attempt to survey, for a general pure mathematical audience, the main ideas of chromatic homotopy theory and some highlights of recent progress.</li>
+
+            <li>Slides available at the Speaker's <a href="https://strickland1.org/talks/survey_talk.pdf" target="_blank">website</a>.</li>
         </div>
     </p>
 
@@ -292,8 +294,8 @@ During this talk, I will show that this isomorphism can be lifted into topologic
             <div class="row">
                 <div class="col-full">
                     <div class="s-footer__copyright">
-                        <span>© Copyright Philosophy 2023</span> 
-                        <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
+                        <span>© Copyright Philosophy 2024</span> 
+                        <span>Site Template by <a href="https://colorlib.com/" target="_blan>Colorlib</a></span>
                         <span>Cover Picture from Zhouli Xu</span>
                     </div>
 
