--- a/index.html
+++ b/index.html
@@ -295,7 +295,7 @@ During this talk, I will show that this isomorphism can be lifted into topologic
                 <div class="col-full">
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2024</span> 
-                        <span>Site Template by <a href="https://colorlib.com/" target="_blan>Colorlib</a></span>
+                        <span>Site Template by <a href="https://colorlib.com/" target="_blank>Colorlib</a></span>
                         <span>Cover Picture from Zhouli Xu</span>
                     </div>
 
