--- a/acts/index.html
+++ b/acts/index.html
@@ -203,7 +203,7 @@
                 <div class="col-full">
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2024</span> 
-                        <span>Site Template by <a href="https://colorlib.com/">Colorlib</a></span>
+                        <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
                         <span>Picture from Qingrui Qu of a moduli space for vowels from linguistics</span>
                     </div>
 
