--- a/acts/22-23/index.html
+++ b/acts/22-23/index.html
@@ -202,7 +202,7 @@
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2024</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
-                        <span>Picture of a charted "distribution space" of vowels created by linguists from <a href="https://www.internationalphoneticassociation.org/content/ipa-chart" target="_blank">here</a>.</span>
+                        <span>Picture from <a href="https://www.internationalphoneticassociation.org/content/ipa-chart" target="_blank">IPA</a> of a charted "distribution space" of vowels created by linguists</span>
                     </div>
 
                     <div class="go-top">
