--- a/acts/index.html
+++ b/acts/index.html
@@ -133,13 +133,13 @@
 
 
 <h3><a id="T"></a>Talks</h3>
-
+<!--
     <p>
-        Apr 3, '23, 
-        <b>Siheng Yi</b>, 
-        <a href="22-23/Yi-20230403.pdf" target="_blank"><i>Interleaving distances between persistence modules</i></a>
+        MMM D, '24, 
+        <b>Speaker</b>, 
+        <a href="24/LastName-2024MMDD.pdf" target="_blank"><i></i></a>
     </p>
-
+-->
 <br /><br /><br />
 <p></p>
 </article>
