--- a/acts/22-23/index.html
+++ b/acts/22-23/index.html
@@ -135,7 +135,7 @@
     <p>
         Apr 3, '23, 
         <b>Siheng Yi</b>, 
-        <a href="22-23/Yi-20230403.pdf" target="_blank"><i>Interleaving distances between persistence modules</i></a>
+        <a href="Yi-20230403.pdf" target="_blank"><i>Interleaving distances between persistence modules</i></a>
     </p>
 
     <p>
@@ -158,7 +158,7 @@
         <b>Yifei Zhu</b>, 
         <a onclick="toggle_visibility('23-2');"><i>Topological combined machine learning for consonant recognition</i></a><br />
         <div id="23-2" class="toshow" style="display:none">
-            <li><a href="22-23/Zhu-20231126.pdf" target="_blank">Slides</a> based on recent talks at the 
+            <li><a href="Zhu-20231126.pdf" target="_blank">Slides</a> based on recent talks at the 
                 Hangzhou Workshop on Topological Data Analysis and at the 
                 FST &amp; FBM Series Lecture of Beijing Normal University – Hong Kong Baptist University United International College 
                 (with support from the Guangdong Provincial Key Laboratory of Interdisciplinary Research and Application for Data Science)</li>    
