--- a/acts/index.html
+++ b/acts/index.html
@@ -64,6 +64,7 @@
                         <li><a href="/" title="" target="_blank">Home</a></li>
                         <li><a href="#A" title="">About</a></li>
                         <li><a href="#T" title="">Talks</a></li>
+                        <li><a href="#R" title="">References</a></li>
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="22-23" title="" target="_blank">2023</a></li>
                         <li><a href="21-22" title="" target="_blank">2022</a></li>
@@ -140,6 +141,27 @@
         <a href="24/LastName-2024MMDD.pdf" target="_blank"><i></i></a>
     </p>
 -->
+
+
+<h3><a id="R"></a>References</h3>
+
+<li>Gunnar Carlsson, <a href="https://www.bimsa.cn/filedownload/79499" target="_blank">Topological methods for deep learning</a> (Carlsson also gave several online lectures on the topic.)</li>
+
+<li>Gunnar Carlsson and Mikael Vejdemo-Johansson, <a href="https://mathscinet.ams.org/mathscinet/article?mr=4346385" target="_blank">Topological data analysis with applications</a></li>
+
+<li>Ephy R. Love, Benjamin Filippenko, Vasileios Maroulas, Gunnar Carlsson, <a href="https://www.jmlr.org/papers/v24/21-0073.html" target="_blank">Topological convolutional layers for deep learning</a></li>
+
+<li>Gunnar Carlsson and Rickard Brüel Gabrielsson, <a href="https://link.springer.com/chapter/10.1007/978-3-030-43408-3_5" target="_blank">Topological approaches to deep learning</a></li>
+
+<li>Laura Alessandretti, Andrea Baronchelli, and Yang-Hui He, <a href="https://www.worldscientific.com/doi/10.1142/9781800613706_0001" target="_blank">Machine learning meets number theory: The data science of Birch–Swinnerton-Dyer</a></li>
+
+<li>Tai-Danae Bradley, Juan Luis Gastaldi, and John Terilla, <a href="https://www.ams.org/journals/notices/202402/rnoti-p174.pdf" target="_blank">The structure of meaning in language: Parallel narratives in linear algebra and category theory</a></li>
+
+<li>Yichen Shen, Nicholas C. Harris, Scott Skirlo et al., <a href="https://www.nature.com/articles/nphoton.2017.93" target="_blank">Deep learning with coherent nanophotonic circuits</a></li>
+
+<li>Xing-Yue Duan, Xiong Ying, Si-Yang Leng, Jürgen Kurths, Wei Lin, and Huan-Fei Ma, <a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.5.L022041" target="_blank">Embedding theory of reservoir computing and reducing reservoir network using time delays</a></li>
+
+
 <br /><br /><br />
 <p></p>
 </article>
