--- a/acts/index.html
+++ b/acts/index.html
@@ -128,7 +128,8 @@
 <h3><a id="A"></a>About</h3>
             
     <p>
-        This semester, the seminar .  
+        This semester, we aim to understand two closely related aspects of the application of topology to deep learning: 
+        (1) topology of neural network architectures and (2) topological inputs for designing neural networks.    
         We meet <b>Thursdays at 2 pm in M4009</b>.
     </p>
 
@@ -179,7 +180,8 @@
                     <div class="s-footer__copyright">
                         <span>© Copyright Philosophy 2024</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
-                        <span>Picture from  of </span>
+                        <span>Cover picture by Zhiwang Yu and Yifei Zhu adapted from Figure 2 of 
+                        <a href="https://colorlib.com/" target="_blank">Love et al., <i>JMLR</i> <b>24</b>, 1–35 (2023)</a></span>
                     </div>
 
                     <div class="go-top">
