--- a/acts/index.html
+++ b/acts/index.html
@@ -181,7 +181,7 @@
                         <span>© Copyright Philosophy 2024</span> 
                         <span>Site Template by <a href="https://colorlib.com/" target="_blank">Colorlib</a></span>
                         <span>Cover picture by Zhiwang Yu and Yifei Zhu adapted from Figure 2 of 
-                        <a href="https://colorlib.com/" target="_blank">Love et al., <i>JMLR</i> <b>24</b>, 1–35 (2023)</a></span>
+                        <a href="https://www.jmlr.org/papers/v24/21-0073.html" target="_blank">Love et al., <i>JMLR</i> <b>24</b>, 1–35 (2023)</a></span>
                     </div>
 
                     <div class="go-top">
