--- a/acts/index.html
+++ b/acts/index.html
@@ -128,7 +128,7 @@
 <h3><a id="A"></a>About</h3>
             
     <p>
-        This semester, we aim to understand two closely related aspects of the application of topology to deep learning: 
+        This semester, we aim to understand and experiment on two closely related aspects of applying topology to deep learning: 
         (1) topology of neural network architectures and (2) topological inputs for designing neural networks.    
         We meet <b>Thursdays at 2 pm in M4009</b>.
     </p>
