--- a/acts/index.html
+++ b/acts/index.html
@@ -63,7 +63,7 @@
                     <ul class="header__nav">
                         <li><a href="/" title="" target="_blank">Home</a></li>
                         <li><a href="#A" title="">About</a></li>
-                        <li><a href="#T" title="">Talks</a></li>
+                        <li><a href="#P" title="">Presentations and Discussions</a></li>
                         <li><a href="#R" title="">References</a></li>
                         <li><a href="/grad" title="" target="_blank">Graduate Seminar</a></li>
                         <li><a href="22-23" title="" target="_blank">2023</a></li>
@@ -134,14 +134,21 @@
     </p>
 
 
-<h3><a id="T"></a>Talks</h3>
-<!--
+<h3><a id="P"></a>Presentations and Discussions</h3>
+
     <p>
-        MMM D, '24, 
+        Jan 19, '24, 
+        <!--
         <b>Speaker</b>, 
-        <a href="24/LastName-2024MMDD.pdf" target="_blank"><i></i></a>
+        -->
+        <a href="24/Group-20240119.pdf" target="_blank"><i>Organizational meeting</i></a>
+        <!--
+        <a onclick="toggle_visibility('24-#');"><i></i></a><br />
+        <div id="24-#" class="toshow" style="display:none">
+            <li></li>
+        </div>
+        -->
     </p>
--->
 
 
 <h3><a id="R"></a>References</h3>
