--- a/acts/index.html
+++ b/acts/index.html
@@ -169,6 +169,8 @@
 
 <li>Gunnar Carlsson and Mikael Vejdemo-Johansson, <a href="https://mathscinet.ams.org/mathscinet/article?mr=4346385" target="_blank">Topological data analysis with applications</a></li>
 
+<li>Pingyao Feng , Siheng Yi, Qingrui Qu, Zhiwang Yu, and Yifei Zhu, <a href="24/draft-20240222.pdf" target="_blank">Topology-enhanced machine learning for consonant recognition</a></li>
+
 
 <br /><br /><br />
 <p></p>
