--- a/acts/index.html
+++ b/acts/index.html
@@ -129,7 +129,7 @@
             
     <p>
         This semester, we aim to understand and experiment on two closely related aspects of applying topology to deep learning: 
-        (1) topology of neural network architectures and (2) topological inputs for designing neural networks.    
+        (1) topology of artificial neural network (NN) architectures and (2) topological inputs for designing NNs.    
         We meet <b>Thursdays at 2 pm in M4009</b>.
     </p>
 
@@ -158,9 +158,9 @@
 <li>Ephy R. Love, Benjamin Filippenko, Vasileios Maroulas, and Gunnar Carlsson, <a href="https://www.jmlr.org/papers/v24/21-0073.html" target="_blank">Topological convolutional layers for deep learning</a></li>
 
 <li>Gunnar Carlsson and Rickard Brüel Gabrielsson, <a href="https://link.springer.com/chapter/10.1007/978-3-030-43408-3_5" target="_blank">Topological approaches to deep learning</a></li>
-<!--
+
 <li>Pingyao Feng, Siheng Yi, Qingrui Qu, Zhiwang Yu, and Yifei Zhu, <a href="24/draft-20240222.pdf" target="_blank">Topology-enhanced machine learning for consonant recognition</a></li>
--->
+
 <li>Xing-Yue Duan, Xiong Ying, Si-Yang Leng, Jürgen Kurths, Wei Lin, and Huan-Fei Ma, <a href="https://journals.aps.org/prresearch/abstract/10.1103/PhysRevResearch.5.L022041" target="_blank">Embedding theory of reservoir computing and reducing reservoir network using time delays</a></li>
 
 <li>Yichen Shen, Nicholas C. Harris, Scott Skirlo et al., <a href="https://www.nature.com/articles/nphoton.2017.93" target="_blank">Deep learning with coherent nanophotonic circuits</a></li>
