--- a/acts/index.html
+++ b/acts/index.html
@@ -36,6 +36,29 @@
 </script>
 
 
+<!-- Katex
+    ================================================== -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.css" integrity="sha384-Um5gpz1odJg5Z4HAmzPtgZKdTBHZdw8S29IecapCSB31ligYPhHQZMIlWLYQGVoc" crossorigin="anonymous">
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/katex.min.js" integrity="sha384-YNHdsYkH6gMx9y3mRkmcJ2mFUjTd0qNQQvY9VYZgQd7DcN7env35GzlmFaZ23JGp" crossorigin="anonymous"></script>
+<script defer src="https://cdn.jsdelivr.net/npm/katex@0.13.11/dist/contrib/auto-render.min.js" integrity="sha384-vZTG03m+2yp6N6BNi5iM4rW4oIwk5DfcNdFfxkk9ZWpDriOkXX8voJBFrAO7MpVl" crossorigin="anonymous"></script>
+<script>
+    document.addEventListener("DOMContentLoaded", function() {
+        renderMathInElement(document.body, {
+          // customised options
+          // • auto-render specific keys, e.g.:
+          delimiters: [
+              {left: '$$', right: '$$', display: true},
+              {left: '$', right: '$', display: false},
+              {left: '\\(', right: '\\)', display: false},
+              {left: '\\[', right: '\\]', display: true}
+          ],
+          // • rendering keys, e.g.:
+          throwOnError : false
+        });
+    });
+</script> 
+
+
 <body id="top">
 
     <!-- pageheader
@@ -141,13 +164,28 @@
         <!--
         <b>Speaker</b>, 
         -->
-        <a href="24/Group-20240119.pdf" target="_blank"><i>Organizational meeting</i></a>
-        <!--
-        <a onclick="toggle_visibility('24-#');"><i></i></a><br />
-        <div id="24-#" class="toshow" style="display:none">
-            <li></li>
+        <a onclick="toggle_visibility('24-1');"><i>Organizational meeting</i></a><br />
+        <div id="24-1" class="toshow" style="display:none">
+            <ol>
+                <li>Topology of Neural Network architectures: Feedforward NN $\to$ Recurrent NN $\to$ Reservoir Computing ($\to$ Time-Delayed RC) $\to$ 
+                    engineering implementation (photonic circuits?) ...</li>
+
+                <li><a href="24/Zhang-20240119.pdf" target="_blank">Topological inputs for designing NNs</a>: Convolutional NN $\to$ Topological CNN, 
+                    in the sense of Carlsson et al. (from [Carlsson et al. 2008] to [Love et al. 2023])</li>
+
+                <li>How are the above two aspects related?</li>
+
+                <li>
+                    <a href="24/Feng-20240119.pdf" target="_blank">Report on [Feng et al.]</a> and what’s next?  
+                    <ul>
+                        <li></li>
+
+                        <li>Other suggestions?</li>
+                    </ul>
+                </li>
+                
+            </ol>
         </div>
-        -->
     </p>
 
 
