--- a/acts/index.html
+++ b/acts/index.html
@@ -178,7 +178,13 @@
                 <li>
                     <a href="24/Feng-20240119.pdf" target="_blank">Report on [Feng et al.]</a> and what’s next?  
                     <ul>
-                        <li></li>
+                        <li>This research drew inspiration from Carlsson and his collaborators’ discovery of the Klein-bottle distribution of 
+                            high-contrast, local patches of natural images [Carlsson et al. 2008], as well as their subsequent recent work on 
+                            topological CNNs for learning image and even video data [Love et al. 2023].  By analogy, we aim to understand a 
+                            distribution space for speech data, even a directed graph structure on it modeling the complex network of 
+                            speech-signal sequences for practical purposes such as <a href="https://en.wikipedia.org/wiki/Speaker_diarisation" 
+                            target="_blank">speaker diarisation</a>, and how these topological inputs may enable smarter learning.  
+                        </li>
 
                         <li>Other suggestions?</li>
                     </ul>
