--- a/acts/index.html
+++ b/acts/index.html
@@ -186,10 +186,22 @@
                             target="_blank">speaker diarisation</a>, and how these topological inputs may enable smarter learning.  
                         </li>
 
-                        <li>Other suggestions?</li>
+                        <li>
+                            Other Suggestions?  
+                            <ul>
+                                <li>Sequence: Attention mechanism</li>
+                                
+                                <li>Comparative non-topological machine learning experiment, input spectrograms instead of PD/MP: Done.</li>
+
+                                <li>How do weight vectors distribute in a CNN trained from the above item?</li>
+
+                                <li><a href="https://librosa.org/" target="_blank">librosa</a>: audio and music processing in Python</li>
+
+                                <li>Interpretability of encoder–decoder bases from <a href="/22-23/#Y" target="_blank">Dr. Yu's Dec 26, '23 talk</a></li>
+                            </ul>                                
+                        </li>                        
                     </ul>
                 </li>
-                
             </ol>
         </div>
     </p>
