--- a/acts/index.html
+++ b/acts/index.html
@@ -189,19 +189,21 @@
                         <li>
                             Other Suggestions?  
                             <ul>
-                                <li>Sequence: Attention mechanism</li>
-                                
                                 <li>Comparative non-topological machine learning experiment, input spectrograms instead of PD/MP: Done.</li>
 
                                 <li>How do weight vectors distribute in a CNN trained from the above item?</li>
 
+                                <li>Sequence: Attention mechanism</li>
+                                
                                 <li><a href="https://librosa.org/" target="_blank">librosa</a>: audio and music processing in Python</li>
 
-                                <li>Interpretability of encoder–decoder bases from <a href="/22-23/#Y" target="_blank">Dr. Yu's Dec 26, '23 talk</a></li>
+                                <li>Interpretability of encoder–decoder bases from <a href="/22-23/#M" target="_blank">Dr. Yu's Dec 26, '23 talk</a></li>
                             </ul>                                
                         </li>                        
                     </ul>
                 </li>
+
+                <li>Derivation of the Klein-filter formulas in [Love et al. 2023]</li>
             </ol>
         </div>
     </p>
